--- a/css folder/style.css
+++ b/css folder/style.css
@@ -1,23 +1,28 @@
 body {
-  /* background-color: rgb(215,188,135);  */
   background-color: hsla(40,40%,90%,1);
   height: 60em;
 }
 h1 {
-  /* background-image: url("../images/salmon_blur.gif"); */
-  background-color: b#DABA7F;
-  height: 5em;
+  background-color: 	rgb(201, 178, 117);
+  background-image: linear-gradient(90deg,rgb(204, 193, 164),#A95833);
+  height: 15%;
   font-family: 'Gloria Hallelujah', cursive;
   font-size: 3em;
   color: cornflowerblue;
+  text-transform: capitalize;
+  text-align: left;
+
 }
+
 footer{
   background-image: url("../images/salmon_blur_crop.gif");
   background-color:#6E6353;
-  height: 15em;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
+  height: 35%;
+  font-family: 'Gloria Hallelujah', cursive;
+  font-display: fallback;
   color: #2E2D28;
   font-size: 2rem;
+  text-transform: lowercase;
 }
 
 a:link {
@@ -29,7 +34,7 @@ a:visited {
 }
 a:hover {
   color:#AD5334;
-  text-decoration: underline;
+  /* text-decoration: none; */
 }
 a:active {
   color:  #2B2D28;
