--- a/css folder/style.css
+++ b/css folder/style.css
@@ -16,7 +16,7 @@ h1 {
   font-weight: bolder;
   color: rgb(46, 142, 202);
   text-transform: uppercase;
-  text-shadow: -3px -3px 7px whitesmoke;
+  text-shadow: -3px -3px 7px rgb(228, 221, 221);
   text-align: start;
   vertical-align: text-top;
   position: fixed;
