--- a/css folder/style.css
+++ b/css folder/style.css
@@ -39,23 +39,14 @@ h2 {
   z-index: 1;
 }
 
-.list {
+div {
   width: 100%;
-  height: 60em;
+  height: auto;
   padding: 2em auto;
   margin-top: 2em;
   margin-bottom: 2em;
   text-align: start;
   text-indent: 5em;
-  overflow: scroll;
- }
-
- #table {
-  width: 50%;
-  height: 15em;
-  margin-left: 10em;
-  margin-right: 10em;
-  padding: 2em auto;
   overflow: scroll;
  }
 
