made second table of percentages

--- a/css folder/style.css
+++ b/css folder/style.css
@@ -1,96 +1,110 @@
 body {
-  background-color: hsla(40,40%,90%,1);
-  height: 50em;
-  word-wrap: normal;
+    background-color: hsla(40, 40%, 90%, 1);
+    height: 50em;
+    word-wrap: normal;
 }
 
 h1 {
-  margin: 0px auto;
-  width: 100%;
-  height: auto;
-  padding: 1em;
-  background-color: 	rgba(201, 178, 117, 1);
-  background-image: linear-gradient(45deg,rgba(204, 193, 164,1),#A95833);
-  font-family: 'Gloria Hallelujah', cursive;
-  font-size: 3em;
-  font-weight: bolder;
-  color: rgb(46, 142, 202);
-  text-transform: uppercase;
-  text-shadow: -3px -3px 7px rgb(228, 221, 221);
-  text-align: start;
-  vertical-align: text-top;
-  position: fixed;
-  z-index: 1;
+    margin: 0px auto;
+    width: 100%;
+    height: auto;
+    padding: 1em;
+    background-color: rgba(201, 178, 117, 1);
+    background-image: linear-gradient(45deg, rgba(204, 193, 164, 1), #A95833);
+    font-family: 'Gloria Hallelujah', cursive;
+    font-size: 3em;
+    font-weight: bolder;
+    color: rgb(46, 142, 202);
+    text-transform: uppercase;
+    text-shadow: -3px -3px 7px rgb(228, 221, 221);
+    text-align: start;
+    vertical-align: text-top;
+    position: fixed;
+    z-index: 1;
 }
 
 h2 {
-  margin: 1em 0px 1em 0px;
-  width: 100%;
-  height: 1rem;
-  padding: 0.5em;
-  font-weight: bolder;
-
+    margin: 1em 0px 1em 0px;
+    width: 100%;
+    height: 1rem;
+    padding: 0.5em;
+    font-weight: bolder;
 }
 
 .space {
-  height: 10em;
-  width: 100%;
-  position: relative;
-  z-index: 1;
+    height: 10em;
+    width: 100%;
+    position: relative;
+    z-index: 1;
 }
 
 .table {
-  width: 75%;
-  height: 45em;
+    width: 75%;
+    height: 45em;
 }
 
 div {
-  width: 100%;
-  height: auto;
-  padding: 2em auto;
-  margin-top: 2em;
-  margin-bottom: 2em;
-  text-align: start;
-  text-indent: 5em;
-  overflow: scroll;
- }
+    width: 100%;
+    height: auto;
+    padding: 2em auto;
+    margin-top: 2em;
+    margin-bottom: 2em;
+    text-align: start;
+    text-indent: 5em;
+    overflow: scroll;
+}
 
- 
- footer{
-   background-image: url("../images/salmon_blur_crop.gif");
-   background-color:#6E6353;
-   width: 100%;
-   height: 35%;
-   padding: 0.3em;
-   font-family: 'Gloria Hallelujah', cursive;
-   font-display: fallback;
-   text-indent: 1em;
-   color: #2E2D28;
-   font-size: 2rem;
-   text-transform: lowercase;
-   text-shadow: 1px 1px 4px black;
-   position: bottom;
-  }
-.navbar> p {
-  float: right;
-  margin-left: 1px;
-  color: white;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  font-size: 1em;
-  }
-  
-div> .navbar> p> a:link {
-  color: white;
-  text-decoration: none;
+.text {
+    display: inline-block;
+    position: absolute;
 }
-div> .navbar> p> a:visited {
-  color: white;
-  text-decoration: none;
+
+div>p>h3 {
+    font: 15px;
+    position: fixed;
 }
-div> .navbar> p> a:hover {
-  color:#AD5334;
-  text-decoration: none;
+
+footer {
+    background-image: url("../images/salmon_blur_crop.gif");
+    background-color: #6E6353;
+    width: 100%;
+    height: 35%;
+    padding: 0.3em;
+    font-family: 'Gloria Hallelujah', cursive;
+    font-display: fallback;
+    text-indent: 1em;
+    color: white;
+    font-size: 2rem;
+    text-transform: lowercase;
+    text-shadow: 1px 1px 4px black;
+    position: bottom;
 }
-div> .navbar> p> a:active {
-  color:  white;
+
+.navbar>ul {
+    display: inline-block;
+    float: right;
+    margin-left: 1px;
+    color: white;
+    font-family: 'Gloria Hallelujah', cursive;
+    font-size: 1em;
+}
+
+a {
+    color: whitesmoke;
+    text-decoration: none;
+}
+
+a: hover {
+    text-decoration: underline;
+}
+
+*/ .fa {
+    padding: 20px;
+    font-size: 50px;
+    color: cornflowerblue;
+    width: 30px;
+    float: left;
+    z-index: 10;
+    text-decoration: none;
+    border-radius: 50%;
 }
