--- a/css folder/style.css
+++ b/css folder/style.css
@@ -115,7 +115,7 @@ a:hover {
     width: 70%;
     align-content: center;
     /* border-collapse: collapse; */
-    border-spacing: 1px 2px;
+    border-spacing: 1px 1px;
 }
 
 th,
@@ -130,4 +130,8 @@ th {
     font-size: 1em;
     font-family: fantasy;
     font-weight: 900;
+}
+
+tr:hover {
+    background-color: rgb(240, 191, 128);
 }
