--- a/css folder/style.css
+++ b/css folder/style.css
@@ -113,9 +113,11 @@ a:hover {
 #table,
 #tablePercent {
     width: 70%;
-    align-content: center;
+    text-align: center;
+    /* align-content: center; */
     /* border-collapse: collapse; */
     border-spacing: 1px 1px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 th,
