added css styling to the submit form

--- a/css folder/style.css
+++ b/css folder/style.css
@@ -53,7 +53,50 @@ div {
     text-indent: 5em;
     overflow: scroll;
 }
+legend {
+    font-weight: 900;
+    font-size: larger;
+}
+fieldset {
+    width: 35em;
+    margin-top: 3em;
+    margin-left: 10em;
+    background-color: white;
+    line-height: 3em;
+    text-align: left;
+}
 
+input[type="text"] {
+    width: 120px;
+    border: 1px solid black;
+    padding: 2em;
+    outline: none;    ;
+}
+input[type="text"]:focus,
+input[type="text"]:hover {
+    background-color: coral;
+    border: 1px solid black;
+}
+input[type="submit"] {
+    width: 11em;
+    border: 1px solid green;
+    background-color: hotpink;
+    color: black;
+    border-radius: 5px;
+    padding: 3px;
+    margin-top: 10px;
+}
+input[type="submit"]:hover {
+    border:1px solid black;
+    background-color: cornflowerblue;
+    color: black;
+    cursor: pointer;
+}
+label{
+    font-family: sans-serif;
+    float: left;
+    margin-right: 3em;
+}
 .text {
     display: inline-block;
     position: absolute;
@@ -114,7 +157,7 @@ a:hover {
 #tablePercent {
     width: 70%;
     text-align: center;
-    /* align-content: center; */
+    align-content: center;
     /* border-collapse: collapse; */
     border-spacing: 1px 1px;
     font-family: Arial, Helvetica, sans-serif;
