added some styles to the form

--- a/css folder/style.css
+++ b/css folder/style.css
@@ -68,23 +68,39 @@ fieldset {
     border: 1px dashed black;
 }
 
+input[type="number"] {
+    width: 120px;
+    line-height: inherit;
+    height: 4em;
+    border: 1px solid black;
+    padding: 0.5em;
+    outline: none;
+    text-align: center;
+}
+input[type="number"]:focus,
+input[type="number"]:hover {
+    background-color: beige;
+    border: 1px solid black;
+}
 input[type="text"] {
     width: 120px;
     line-height: inherit;
     height: 4em;
     border: 1px solid black;
     padding: 0.5em;
-    outline: none;    ;
+    outline: none;
+    text-align: center;
+
 }
 input[type="text"]:focus,
 input[type="text"]:hover {
-    background-color: coral;
+    background-color: beige;
     border: 1px solid black;
 }
 input[type="submit"] {
     width: 11em;
     border: 1px solid green;
-    background-color: hotpink;
+    background-color: rgb(240, 191, 128);
     color: black;
     border-radius: 5px;
     padding: 3px;
@@ -96,6 +112,12 @@ input[type="submit"]:hover {
     background-color: cornflowerblue;
     color: black;
     cursor: pointer;
+}
+input :invalid {
+    border: 2px dashed red;
+}
+input :valid {
+    border: 2px dashed black;
 }
 label{
     font-family: sans-serif;
