introduced the validations

--- a/css folder/style.css
+++ b/css folder/style.css
@@ -79,7 +79,7 @@ input[type="number"] {
 }
 input[type="number"]:focus,
 input[type="number"]:hover {
-    background-color: beige;
+    background-color: bisque;
     border: 1px solid black;
 }
 input[type="text"] {
@@ -94,7 +94,7 @@ input[type="text"] {
 }
 input[type="text"]:focus,
 input[type="text"]:hover {
-    background-color: beige;
+    background-color: bisque;
     border: 1px solid black;
 }
 input[type="submit"] {
