--- a/css folder/style.css
+++ b/css folder/style.css
@@ -3,6 +3,7 @@ body {
     height: 50em;
     word-wrap: normal;
 }
+
 .space_over_header {
     width: 100%;
     height: 2em;
@@ -11,8 +12,8 @@ body {
     top: -2em;
     border-collapse: collapse;
     z-index: 10;
-
 }
+
 h1 {
     margin: 1px auto;
     width: 100%;
@@ -198,7 +199,7 @@ a:hover {
 
 #table,
 #tablePercent {
-    width: 70%;
+    width: 80%;
     margin-left: 10em;
     margin-top: 2em;
     text-align: center;
@@ -221,6 +222,7 @@ th {
     font-size: 1em;
     font-family: fantasy;
     font-weight: 900;
+    width: auto;
 }
 
 tr:hover {
