--- a/css folder/style.css
+++ b/css folder/style.css
@@ -41,25 +41,6 @@ h2 {
     font-weight: bolder;
 }
 
-span {
-    margin-top: 2em;
-    margin-left: 1em;
-    display: inline-block;
-    position: fixed;
-    right: 5em;
-    top: 1em;
-    font-family: 'Gloria Hallelujah', cursive;
-    font-size: 2em;
-    z-index: 10;
-}
-
-.space {
-    height: 5em;
-    width: 100%;
-    position: relative;
-    z-index: 1;
-}
-
 div {
     width: 90%;
     height: auto;
@@ -67,12 +48,31 @@ div {
     margin-top: 2em;
     margin-bottom: 2em;
     text-align: start;
-    text-indent: 5em;
-    overflow: scroll;
+    text-indent: 1em;
 }
 
-#map {
-        margin-top: 4em;
+span {
+    display: inline;
+    margin: 2em auto;
+}
+
+span a {
+    margin-top: 3em;
+    float: left;
+    margin-left: 2em;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 2em;
+}
+
+.space {
+    height: 5em;
+    width: 100%;
+    position: relative;
+    z-index: 10;
+}
+
+.mapouter {
+        margin-top: 10em;
         margin-left: 10em;
         padding: 1em;
 }
@@ -83,11 +83,10 @@ legend {
 }
 fieldset {
     width: 15em;
-    margin-top: 3em;
+    margin-top: 15em;
     margin-left: 10em;
-    padding: 1em;
+    padding: 3em;
     background-color: white;
-    line-height: 2em;
     text-align: left;
     border: 1px dashed black;
 }
@@ -183,19 +182,6 @@ a:hover {
     color: white;
     text-decoration: underline;
 }
-
-/* .fa *\ {
-    padding: 20px;
-    font-size: 2rem;
-    color: cornflowerblue;
-    width: 30px;
-    position: relative;
-    top: -5em;
-    right: 100px;
-    z-index: 10;
-    text-decoration: none;
-    border-radius: 50%;
-} */
 
 #table,
 #tablePercent {
