--- a/css folder/style.css
+++ b/css folder/style.css
@@ -14,7 +14,7 @@ body {
     z-index: 10;
 }
 
-h1 {
+h1, h3 {
     margin: 1px auto;
     width: 100%;
     height: 2em;
@@ -75,6 +75,9 @@ span a {
         margin-top: 10em;
         margin-left: 10em;
         padding: 1em;
+}
+section {
+    float: right;
 }
 
 legend {
