--- a/css folder/style.css
+++ b/css folder/style.css
@@ -112,7 +112,7 @@ legend {
 fieldset {
     width: 15em;
     margin-top: 15em;
-    margin-left: 25em;
+    margin-left: 20em;
     padding: 3em;
     background-color: white;
     text-align: left;
@@ -217,13 +217,11 @@ a:hover {
 /* Sales table CSS */
 #table,
 #tablePercent {
-    width: 80%;
     margin-top: 2em;
     text-align: center;
     border-spacing: 1px 1px;
     font-family: Arial, Helvetica, sans-serif;
-    margin-left: 25em;
-    /* border: 3px dashed red; */
+    margin-left: 20em;
 
 }
 #table>h2, #tablePercent>h2 {
@@ -233,19 +231,19 @@ a:hover {
 
 th,
 td {
-    padding: 1px 2px 2px 2px;
+    padding: 5px 4px 4px 4px;
     border: 0.5px solid black;
     align-content: bottom;
 }
 
 th {
     letter-spacing: 0.1em;
-    font-size: 1em;
+    font-size: 1.1em;
     font-family: fantasy;
     font-weight: 900;
     width: auto;
 }
 
 tr:hover {
-    background-color: rgb(240, 191, 128);
+    background-color: #f6f6f6;
 }
