--- a/css folder/style.css
+++ b/css folder/style.css
@@ -253,6 +253,7 @@ tr:hover {
     width: 100%;
     text-transform: capitalize;
     /* color: white; */
-    line-height: 1.5em;
-    word-spacing: 1.5em; 
+    line-height: 1.8em;
+    word-spacing: 0.3em; 
+    font-size: 13px;
 }
